fix[body-overflow:hidden]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,6 +192,9 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 
 @media (max-width: 575.98px) {
  
+ body {
+  overflow:hidden;
+ }
  
  main {
   padding-bottom: 45px;
